--- a/frontend/src/app/layout/components/navbar/navbar.component.html
+++ b/frontend/src/app/layout/components/navbar/navbar.component.html
@@ -58,7 +58,7 @@
           <div class="user-nav d-sm-flex d-none">
             <span class="user-name font-weight-bolder"
             >{{ this.currentUser.prenom }} {{ this.currentUser.nom }}</span
-            ><span class="user-status">{{ this.currentUser.role }}</span>
+            ><span class="user-status">{{ this.currentUser.role | slice:5  }}</span>
           </div>
           <span class="avatar">
             <app-initials-avatar [user]="this.currentUser" [size]="2.5"></app-initials-avatar>
@@ -67,12 +67,10 @@
         </ng-container>
       </a>
       <div ngbDropdownMenu aria-labelledby="navbarUserDropdown" class="dropdown-menu dropdown-menu-right">
-        <a ngbDropdownItem [routerLink]="['/pages/profile']"
-        ><span [data-feather]="'user'" [class]="'mr-50'"></span> Profile</a
-        >
-        <div class="dropdown-divider"></div>
-        <a ngbDropdownItem [routerLink]="['/pages/account-settings']"
-        ><a ngbDropdownItem (click)="logout()"><span [data-feather]="'power'" [class]="'mr-50'"></span> Logout</a></a>
+<!--        <a ngbDropdownItem [routerLink]="['/pages/profile']"><span [data-feather]="'user'" [class]="'mr-50'"></span> Profile</a>-->
+<!--        <div class="dropdown-divider"></div>-->
+        <a ngbDropdownItem [routerLink]="['/pages/account-settings']">
+          <a ngbDropdownItem (click)="logout()"><span [data-feather]="'power'" [class]="'mr-50'"></span> Logout</a></a>
       </div>
     </li>
     <!--/ User Dropdown -->
