--- a/frontend/src/app/main/apps/user/user-view/user-view.component.html
+++ b/frontend/src/app/main/apps/user/user-view/user-view.component.html
@@ -1,16 +1,12 @@
 <div class="content-wrapper container-xxl p-0">
   <div class="content-body">
-    <!-- page users view start -->
     <section class="app-user-view">
-      <!-- User Card & Plan Starts -->
       <div class="row">
-        <!-- User Card starts-->
         <div class="col-xl-12 col-lg-12 col-md-12">
           <div class="card user-card">
             <div class="card-body">
               <div class="row">
                 <div class="col-xl-12 col-lg-12 d-flex justify-content-between border-container-lg">
-                  <!--  Basic stuff -->
                   <div class="user-avatar-section">
                     <div class="d-flex justify-content-start">
                       <app-initials-avatar [user]="data" [size]="2.5"></app-initials-avatar>
@@ -28,24 +24,8 @@
                       </div>
                     </div>
                   </div>
-                  <!--/ Basic stuff -->
-
-                  <!-- User infos -->
                   <div class="user-info-wrapper">
-                    <!--                    <div class="d-flex flex-wrap">-->
-                    <!--                      <div class="user-info-title">-->
-                    <!--                        <i data-feather="user" class="mr-1"></i>-->
-                    <!--                        <span class="card-text user-info-title font-weight-bold mb-0">Username</span>-->
-                    <!--                      </div>-->
-                    <!--                      <p class="card-text mb-0">{{ data.username }}</p>-->
-                    <!--                    </div>-->
-                    <!--                    <div class="d-flex flex-wrap my-50">-->
-                    <!--                      <div class="user-info-title">-->
-                    <!--                        <i data-feather="check" class="mr-1"></i>-->
-                    <!--                        <span class="card-text user-info-title font-weight-bold mb-0">Status</span>-->
-                    <!--                      </div>-->
-                    <!--                      <p class="card-text mb-0">{{ data.status }}</p>-->
-                    <!--                    </div>-->
+
                     <div class="d-flex flex-wrap my-50">
                       <div class="user-info-title">
                         <i data-feather="star" class="mr-1"></i>
@@ -56,9 +36,9 @@
                     <div class="d-flex flex-wrap my-50">
                       <div class="user-info-title">
                         <i data-feather="flag" class="mr-1"></i>
-                        <span class="card-text user-info-title font-weight-bold mb-0">Country</span>
+                        <span class="card-text user-info-title font-weight-bold mb-0">Birth date</span>
                       </div>
-                      <p class="card-text mb-0">England</p>
+                      <p class="card-text mb-0">{{ data.dateDeNaissance }}</p>
                     </div>
                     <div class="d-flex flex-wrap">
                       <div class="user-info-title">
@@ -68,99 +48,12 @@
                       <p class="card-text mb-0">{{ data.numTel }}</p>
                     </div>
                   </div>
-                  <!--/ User Permissions -->
-
-                  <!-- User Infos -->
-                  <div class="d-flex flex-column align-items-center user-total-numbers" style="margin-top: unset;">
-                    <div class="d-flex align-items-center">
-                      <div class="color-box bg-light-primary">
-                        <i [data-feather]="'dollar-sign'" [class]="'text-primary'"></i>
-                      </div>
-                      <div class="ml-1">
-                        <h5 class="mb-0">23.3k</h5>
-                        <small>Monthly Sales</small>
-                      </div>
-                    </div>
-                    <div class="d-flex align-items-center">
-                      <div class="color-box bg-light-success">
-                        <i [data-feather]="'trending-up'" [class]="'text-success'"></i>
-                      </div>
-                      <div class="ml-1">
-                        <h5 class="mb-0">$99.87K</h5>
-                        <small>Annual Profit</small>
-                      </div>
-                    </div>
-                  </div>
-                  <!--/ User Numbers -->
                 </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <!-- User Card & Plan Ends -->
-
-      <!-- User Timeline & Permissions Starts -->
-      <div class="row">
-        <!-- information starts -->
-        <div class="col-md-6">
-          <div class="card">
-            <div class="card-header">
-              <h4 class="card-title mb-2">User Timeline</h4>
-            </div>
-            <div class="card-body">
-              <ul class="timeline">
-                <li class="timeline-item">
-                  <span class="timeline-point timeline-point-indicator"></span>
-                  <div class="timeline-event">
-                    <div class="d-flex justify-content-between flex-sm-row flex-column mb-sm-0 mb-1">
-                      <h6>12 Invoices have been paid</h6>
-                      <span class="timeline-event-time">12 min ago</span>
-                    </div>
-                    <p>Invoices have been paid to the company.</p>
-                    <div class="media align-items-center">
-                      <img class="mr-1" src="assets/images/icons/file-icons/pdf.png" alt="invoice" height="23" />
-                      <div class="media-body">invoice.pdf</div>
-                    </div>
-                  </div>
-                </li>
-                <li class="timeline-item">
-                  <span class="timeline-point timeline-point-warning timeline-point-indicator"></span>
-                  <div class="timeline-event">
-                    <div class="d-flex justify-content-between flex-sm-row flex-column mb-sm-0 mb-1">
-                      <h6>Client Meeting</h6>
-                      <span class="timeline-event-time">45 min ago</span>
-                    </div>
-                    <p>Project meeting with john @10:15am.</p>
-                    <div class="media align-items-center">
-                      <div class="avatar">
-                        <img src="assets/images/avatars/12-small.png" alt="avatar" height="38" width="38" />
-                      </div>
-                      <div class="media-body ml-50">
-                        <h6 class="mb-0">John Doe (Client)</h6>
-                        <span>CEO of Infibeam</span>
-                      </div>
-                    </div>
-                  </div>
-                </li>
-                <li class="timeline-item">
-                  <span class="timeline-point timeline-point-info timeline-point-indicator"></span>
-                  <div class="timeline-event">
-                    <div class="d-flex justify-content-between flex-sm-row flex-column mb-sm-0 mb-1">
-                      <h6>Create a new project for client</h6>
-                      <span class="timeline-event-time">2 days ago</span>
-                    </div>
-                    <p class="mb-0">Add files to new design folder</p>
-                  </div>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <!-- information Ends -->
-      </div>
-      <!-- User Timeline & Permissions Ends -->
     </section>
-    <!-- page users view end -->
   </div>
 </div>
