--- a/frontend/src/app/main/pages/classe/nouveau-classe/nouveau-classe.component.html
+++ b/frontend/src/app/main/pages/classe/nouveau-classe/nouveau-classe.component.html
@@ -1,4 +1,4 @@
-<div    *ngIf="currentUser.role === 'ROLE_ETUDIANT' ">
+<div    *ngIf="currentUser.role === 'ROLE_ADMIN' ">
 
 <div class="col mb-3">
   <div class="col-md-12 mb-3 mt-3">
@@ -62,7 +62,7 @@
   </div>
 </div>
 
-<div    *ngIf="currentUser.role != 'ROLE_ETUDIANT' ">
+<div    *ngIf="currentUser.role != 'ROLE_ADMIN' ">
 <div  class="alert alert-info" role="alert" >
   <div class="d-flex justify-content-center">
     <H1>You Should Connect As Admin To Insert Class </H1>
