--- a/frontend/src/app/main/pages/etudiant/nouveau-etudiant/nouveau-etudiant/nouveau-etudiant.component.html
+++ b/frontend/src/app/main/pages/etudiant/nouveau-etudiant/nouveau-etudiant/nouveau-etudiant.component.html
@@ -1,70 +1,57 @@
-<div    *ngIf="currentUser.role === 'ROLE_ADMIN' ">
-<div class="col mb-3">
-    <div class="col-md-12 mb-3 mt-3">
-      <button (click)="fileInput.click()" style="background-color: transparent; border: none;">
-
-        <div *ngIf="etudiantDto.photo">
-          <img [src]="etudiantDto.photo" class="rounded-circle" width="100px" height="100px">
-          <input hidden type="file" #fileInput (change)="(fileInput.files)">
-        </div>
-        <div *ngIf="etudiantDto.photo==null" >
-          <app-initials-avatar [user]="etudiantDto" [size]="7.2"></app-initials-avatar>
-        </div>
-
-        <input hidden type="file" #fileInput (change)="onFileInput(fileInput.files)">
-
-      </button>
-    </div>
-    <hr>
+<div *ngIf="currentUser.role === 'ROLE_ADMIN' ">
+  <div class="col mb-3">
     <div class="col-md-12">
       <div class="col-md-12 mb-3">
         <h2><i class="fas fa-info-circle blue-color"></i>&nbsp;Student Information</h2>
       </div>
 
       <div class="col-md-12">
-          <div class="alert alert-danger" *ngIf="errorMsg.length > 0">
-            <div *ngFor="let msg of errorMsg">
-            <span >{{msg}}</span>
+        <div class="alert alert-danger" *ngIf="errorMsg.length > 0">
+          <div *ngFor="let msg of errorMsg">
+            <span>{{msg}}</span>
 
           </div>
         </div>
         <form>
           <div class="row mb-3">
             <div class="col">
-             <!-- <input type="text" class="form-control" name="codearticle" placeholder="Code article" [(ngModel)]="articleDto.codeArticle"> -->
-              <input type="text" class="form-control" name="Name" placeholder="Name"  [(ngModel)]="etudiantDto.nom"  >
+              <!-- <input type="text" class="form-control" name="codearticle" placeholder="Code article" [(ngModel)]="articleDto.codeArticle"> -->
+              <input type="text" class="form-control" name="Name" placeholder="Name" [(ngModel)]="etudiantDto.nom">
 
             </div>
             <div class="col">
-            <!--  <input type="text" class="form-control" name="designation" placeholder="Designation"  [(ngModel)]="articleDto.designation"> -->
-              <input type="text" class="form-control" name="FirstName" placeholder="FirstName" [(ngModel)]="etudiantDto.prenom"  >
+              <!--  <input type="text" class="form-control" name="designation" placeholder="Designation"  [(ngModel)]="articleDto.designation"> -->
+              <input type="text" class="form-control" name="FirstName" placeholder="FirstName"
+                     [(ngModel)]="etudiantDto.prenom">
 
             </div>
           </div>
           <div class="row mb-3">
             <div class="col">
-              <input type="text" class="form-control" name="date" placeholder="date" [(ngModel)]="etudiantDto.dateDeNaissance">
+              <input type="text" class="form-control" name="date" placeholder="date"
+                     [(ngModel)]="etudiantDto.dateDeNaissance">
 
             </div>
 
 
             <div class="col">
-                  <input type="text" class="form-control" name="Email" placeholder="Email " [(ngModel)]="etudiantDto.email">
+              <input type="text" class="form-control" name="Email" placeholder="Email " [(ngModel)]="etudiantDto.email">
             </div>
 
             <div class="col">
-              <select class="form-control" name="Class" [(ngModel)] = "classeDto.id" >
-                <option [value]="null">Select Class </option>
-               <!--  <option *ngFor="let cat of listeCategorie" [value]="cat.id">{{ cat.code }} - {{ cat.designation }}</option> -->
-                <option *ngFor="let class of listeClasse" [value]= "class.id"> {{ class.nomClasse }}</option>
+              <select class="form-control" name="Class" [(ngModel)]="classeDto.id">
+                <option [value]="null">Select Class</option>
+                <!--  <option *ngFor="let cat of listeCategorie" [value]="cat.id">{{ cat.code }} - {{ cat.designation }}</option> -->
+                <option *ngFor="let class of listeClasse" [value]="class.id"> {{ class.nomClasse }}</option>
               </select>
             </div>
 
             <div class="col">
-              <select class="form-control" name="Parent" [(ngModel)] = "parentDto.id" >
+              <select class="form-control" name="Parent" [(ngModel)]="parentDto.id">
                 <option [value]="null">Select Parent</option>
-               <!--  <option *ngFor="let cat of listeCategorie" [value]="cat.id">{{ cat.code }} - {{ cat.designation }}</option> -->
-                <option *ngFor="let par of listeParent" [value]= "par.id">  {{ par.id }} - mr {{ par.nom }} - {{ par.prenom }} </option>
+                <!--  <option *ngFor="let cat of listeCategorie" [value]="cat.id">{{ cat.code }} - {{ cat.designation }}</option> -->
+                <option *ngFor="let par of listeParent" [value]="par.id">  {{ par.id }} - mr {{ par.nom }}
+                  - {{ par.prenom }} </option>
               </select>
             </div>
 
@@ -72,31 +59,32 @@
           </div>
 
 
-
-
           <div class="row mb-3">
             <div class="col">
-              <input type="text" class="form-control" name="adresse1" placeholder="adresse1" [(ngModel)]="adresseDto.adresse1">
+              <input type="text" class="form-control" name="adresse1" placeholder="adresse1"
+                     [(ngModel)]="adresseDto.adresse1">
             </div>
 
 
-              <div class="col">
-                <input type="text" class="form-control" name="adresse2" placeholder="adresse2" [(ngModel)]="adresseDto.adresse2">
-              </div>
+            <div class="col">
+              <input type="text" class="form-control" name="adresse2" placeholder="adresse2"
+                     [(ngModel)]="adresseDto.adresse2">
+            </div>
 
 
-                <div class="col">
-                  <input type="text" class="form-control" name="codePostale" placeholder="codePostale"[(ngModel)]="adresseDto.codePostale">
-                </div>
+            <div class="col">
+              <input type="text" class="form-control" name="codePostale" placeholder="codePostale"
+                     [(ngModel)]="adresseDto.codePostale">
+            </div>
 
 
-                  <div class="col">
-                    <input type="text" class="form-control" name="pays" placeholder="pays" [(ngModel)]="adresseDto.pays">
-                  </div>
-                   </div>
+            <div class="col">
+              <input type="text" class="form-control" name="pays" placeholder="pays" [(ngModel)]="adresseDto.pays">
+            </div>
+          </div>
 
 
-                   <div class="row mb-3">
+          <div class="row mb-3">
 
             <div class="col">
               <input type="text" class="form-control" name="ville" placeholder="ville" [(ngModel)]="adresseDto.ville">
@@ -105,24 +93,38 @@
 
           </div>
 
+          <div class="col-md-12 mb-3 mt-3">
+            <h3><i class="fas fa-info-circle blue-color mb-2"></i>&nbsp;Credentials</h3>
+            <button (click)="fileInput.click()" style="background-color: transparent; border: none;">
+              <div *ngIf="etudiantDto.photo; then content else placeholder" class="d-flex"></div>
+              <ng-template #content >
+                <img [src]="etudiantDto.photo" class="rounded-circle" width="60px" height="60px">
+                <span class="text-success">Credential requirements satisfied</span>
 
+                <input hidden type="file" #fileInput (change)="(fileInput.files)">
+              </ng-template>
+              <ng-template #placeholder>
+                <img src="http://craftsnippets.com/articles_images/placeholder/placeholder.jpg" class="rounded-circle mr-2" width="60px" height="60px" alt="placeholder">
+                <span class="text-danger" *ngIf="!this.providedCredentials">No credentials provided</span>
+                <span class="text-info" *ngIf="this.providedCredentials">Selected credentials</span>
+              </ng-template>
 
-
-
-
+              <input hidden type="file" #fileInput (change)="onFileInput(fileInput.files)">
+            </button>
+          </div>
 
         </form>
       </div>
     </div>
     <div class="col-md-12 text-right">
-  <!--<button class="btn btn-danger mr-3" (click)="cancel()"> -->
+      <!--<button class="btn btn-danger mr-3" (click)="cancel()"> -->
       <button class="btn btn-outline-primary round" (click)="cancelClick()">
 
         <i class="fas fa-ban"></i>&nbsp;
         CANCEL
       </button>
-    <!--<button class="btn btn-primary" (click)="enregistrerArticle()"> -->
-        <button class="btn btn-outline-primary round"(click)="enregistrerEtudiant()">
+      <!--<button class="btn btn-primary" (click)="enregistrerArticle()"> -->
+      <button class="btn btn-outline-primary round" (click)="enregistrerEtudiant()">
 
         <i class="fas fa-save"></i>&nbsp;
         SAVE
@@ -131,11 +133,11 @@
 
   </div>
 </div>
-<div    *ngIf="currentUser.role != 'ROLE_ADMIN' ">
-<div  class="alert alert-info" role="alert" >
-  <div class="d-flex justify-content-center">
-    <H1>You Should Connect As Admin To Insert Students  </H1>
+<div *ngIf="currentUser.role != 'ROLE_ADMIN' ">
+  <div class="alert alert-info" role="alert">
+    <div class="d-flex justify-content-center">
+      <H1>You Should Connect As Admin To Insert Students </H1>
+    </div>
   </div>
-</div>
 </div>
 
