--- a/frontend/src/app/layout/components/content-header/breadcrumb/breadcrumb.component.html
+++ b/frontend/src/app/layout/components/content-header/breadcrumb/breadcrumb.component.html
@@ -1,6 +1,6 @@
 <!-- app-breadcrumb start -->
 <div
-  class="breadcrumb-wrapper d-flex"
+  class="breadcrumb-wrapper d-flex mb-2"
   [ngClass]="{
     'justify-content-center': breadcrumb.alignment == 'center',
     'justify-content-end': breadcrumb.alignment == 'right'
