--- a/frontend/src/app/main/apps/user/user-edit/user-edit.component.html
+++ b/frontend/src/app/main/apps/user/user-edit/user-edit.component.html
@@ -1,6 +1,8 @@
 <div class="content-wrapper container-xxl p-0">
   <div class="content-body">
     <!-- users edit start -->
+    <app-breadcrumb [breadcrumb]="breadcrumbDefault" class="mb-2"></app-breadcrumb>
+
     <section class="app-user-edit">
       <div class="card">
         <div class="card-body">
@@ -205,7 +207,7 @@
                   <form class="form-validate">
                     <div class="row">
                       <div class="col-lg-4 col-md-6 form-group">
-                        <label for="twitter-input">Password</label>
+                        <label for="password">Password</label>
                         <div class="input-group input-group-merge">
                           <div class="input-group-prepend">
                             <span class="input-group-text" id="basic-addon3">
