--- a/frontend/src/app/main/apps/user/user-list/new-user-sidebar/new-user-sidebar.component.html
+++ b/frontend/src/app/main/apps/user/user-list/new-user-sidebar/new-user-sidebar.component.html
@@ -4,11 +4,11 @@
     <div class="modal-dialog">
       <form class="add-new-user modal-content pt-0" (ngSubmit)="(newUserForm.form.valid)" #newUserForm="ngForm">
         <button
-          type="button"
-          class="close"
-          data-dismiss="modal"
-          aria-label="Close"
-          (click)="toggleSidebar('new-user-sidebar')"
+            type="button"
+            class="close"
+            data-dismiss="modal"
+            aria-label="Close"
+            (click)="toggleSidebar('new-user-sidebar')"
         >
           ×
         </button>
@@ -17,88 +17,109 @@
         </div>
         <div class="modal-body flex-grow-1">
           <div class="form-group">
-            <label class="form-label" for="basic-icon-default-fullname">Full Name</label>
+            <label class="form-label" for="basic-icon-default-fullname">First Name</label>
             <input
-              type="text"
-              class="form-control dt-full-name"
-              id="basic-icon-default-fullname"
-              placeholder="John Doe"
-              name="user-fullname"
-              [(ngModel)]="fullname"
-              [class.error]="newUserForm.submitted && FNameRef.invalid"
-              #FNameRef="ngModel"
-              required
-              aria-label="John Doe"
-              aria-describedby="basic-icon-default-fullname2"
+                type="text"
+                class="form-control dt-first-name"
+                id="basic-icon-default-fullname"
+                placeholder="John"
+                name="user-first-name"
+                [(ngModel)]="user.prenom"
+                [class.error]="newUserForm.submitted && FNameRef.invalid"
+                #FNameRef="ngModel"
+                required
             />
             <span *ngIf="newUserForm.submitted && FNameRef.invalid" class="invalid-form">
               <small class="form-text text-danger" *ngIf="FNameRef.errors.required">This field is required!</small>
             </span>
           </div>
+
           <div class="form-group">
-            <label class="form-label" for="basic-icon-default-uname">Username</label>
+            <label class="form-label" for="basic-icon-default-fullname">Last Name</label>
             <input
-              type="text"
-              id="basic-icon-default-uname"
-              class="form-control dt-uname"
-              placeholder="Web Developer"
-              aria-label="jdoe1"
-              aria-describedby="basic-icon-default-uname2"
-              name="user-name"
-              [(ngModel)]="username"
-              [class.error]="newUserForm.submitted && FUserNameRef.invalid"
-              #FUserNameRef="ngModel"
-              required
+                type="text"
+                class="form-control dt-last-name"
+                id="basic-icon-default-last"
+                placeholder="Doe"
+                name="user-last-name"
+                [(ngModel)]="user.nom"
+                [class.error]="newUserForm.submitted && LNameRef.invalid"
+                #LNameRef="ngModel"
+                required
             />
-            <span *ngIf="newUserForm.submitted && FUserNameRef.invalid" class="invalid-form">
-              <small class="form-text text-danger" *ngIf="FUserNameRef.errors.required">This field is required!</small>
+            <span *ngIf="newUserForm.submitted && LNameRef.invalid" class="invalid-form">
+              <small class="form-text text-danger" *ngIf="LNameRef.errors.required">This field is required!</small>
             </span>
           </div>
+
           <div class="form-group">
-            <label class="form-label" for="basic-icon-default-email">Email</label>
+            <label class="form-label-2" for="basic-icon-default-email">Email</label>
             <input
-              type="text"
-              id="basic-icon-default-email"
-              class="form-control dt-email"
-              placeholder="john.doe@example.com"
-              aria-label="john.doe@example.com"
-              aria-describedby="basic-icon-default-email2"
-              name="user-email"
-              [(ngModel)]="email"
-              [class.error]="newUserForm.submitted && FEmailRef.invalid"
-              #FEmailRef="ngModel"
-              required
+                type="email"
+                class="form-control dt-email"
+                id="basic-icon-default-email"
+                placeholder="email@example.com"
+                name="user-email"
+                [(ngModel)]="user.email"
+                [class.error]="newUserForm.submitted && EmailRef.invalid"
+                #EmailRef="ngModel"
+                required
             />
-            <span *ngIf="newUserForm.submitted && FEmailRef.invalid" class="invalid-form">
-              <small class="form-text text-danger" *ngIf="FEmailRef.errors.required">This field is required!</small>
+            <span *ngIf="newUserForm.submitted && EmailRef.invalid" class="invalid-form">
+              <small class="form-text text-danger" *ngIf="EmailRef.errors.required">This field is required!</small>
+              <small class="form-text text-danger" *ngIf="EmailRef.errors.email">Please enter a valid email!</small>
             </span>
-            <small class="form-text text-muted"> You can use letters, numbers & periods </small>
           </div>
+
+
           <div class="form-group">
-            <label class="form-label" for="user-role">User Role</label>
-            <select id="user-role" class="form-control">
-              <option value="subscriber">Subscriber</option>
-              <option value="editor">Editor</option>
-              <option value="maintainer">Maintainer</option>
-              <option value="author">Author</option>
-              <option value="admin">Admin</option>
-            </select>
+            <label class="form-label mb-1" for="basic-icon-default-password">Phone number</label>
+            <div class="position-relative has-icon-left">
+              <input
+                  type="number"
+                  class="form-control dt-password"
+                  id="basic-phone"
+                  placeholder="Phone number"
+                  name="user-phone"
+                  [(ngModel)]="user.numTel"
+                  [class.error]="newUserForm.submitted && PhoneRef.invalid"
+                  #PhoneRef="ngModel"
+                  required
+              />
+              <span *ngIf="newUserForm.submitted && PhoneRef.invalid" class="invalid-form">
+                <small class="form-text text-danger" *ngIf="PhoneRef.errors.required">This field is required!</small>
+              </span>
+            </div>
           </div>
-          <div class="form-group mb-2">
-            <label class="form-label" for="user-plan">Select Plan</label>
-            <select id="user-plan" class="form-control">
-              <option value="basic">Basic</option>
-              <option value="enterprise">Enterprise</option>
-              <option value="company">Company</option>
-              <option value="team">Team</option>
-            </select>
+
+          <div class="form-group">
+            <label class="form-label mb-1" for="basic-icon-default-password">Password</label>
+            <div class="position-relative has-icon-left">
+              <input
+                  type="password"
+                  class="form-control dt-password"
+                  id="basic-icon-default-password"
+                  placeholder="Password"
+                  name="user-password"
+                  [(ngModel)]="user.password"
+                  [class.error]="newUserForm.submitted && PasswordRef.invalid"
+                  #PasswordRef="ngModel"
+                  required
+              />
+              <span *ngIf="newUserForm.submitted && PasswordRef.invalid" class="invalid-form">
+                <small class="form-text text-danger" *ngIf="PasswordRef.errors.required">This field is required!</small>
+              </span>
+            </div>
           </div>
+
+
+
           <button type="submit" class="btn btn-primary mr-1" (click)="submit(newUserForm)" rippleEffect>Submit</button>
           <button
-            type="reset"
-            class="btn btn-outline-secondary"
-            (click)="toggleSidebar('new-user-sidebar')"
-            rippleEffect
+              type="reset"
+              class="btn btn-outline-secondary"
+              (click)="toggleSidebar('new-user-sidebar')"
+              rippleEffect
           >
             Cancel
           </button>
