--- a/frontend/src/app/main/apps/user/user-view/user-view.component.html
+++ b/frontend/src/app/main/apps/user/user-view/user-view.component.html
@@ -1,5 +1,8 @@
 <div class="content-wrapper container-xxl p-0">
   <div class="content-body">
+    <app-breadcrumb [breadcrumb]="breadcrumbDefault" class="mb-2"></app-breadcrumb>
+
+
     <section class="app-user-view">
       <div class="row">
         <div class="col-xl-12 col-lg-12 col-md-12">
