--- a/frontend/src/app/main/pages/ecole/ecole-new/ecole-new.component.html
+++ b/frontend/src/app/main/pages/ecole/ecole-new/ecole-new.component.html
@@ -29,7 +29,7 @@
                         <ngb-alert [type]="'danger'" *ngIf="!inputName.valid" class="mt-lg-0" [dismissible]="false">
                             <div class="alert-body" >
                                 <span [data-feather]="'info'" [class]="'mr-50 align-middle'"></span>
-                                <small>The value is <strong>invalid</strong> enter valid name</small>
+                                <small>Enter<strong> valid name</strong></small>
                             </div>
                         </ngb-alert>
                     </div>
@@ -64,7 +64,7 @@
                         <ngb-alert [type]="'danger'" *ngIf="!inputEmail.valid" class="mt-lg-0" [dismissible]="false">
                             <div class="alert-body" >
                                 <span [data-feather]="'info'" [class]="'mr-50 align-middle'"></span>
-                                <small>The value is <strong>invalid</strong>Enter valid mail </small>
+                                <small>Enter<strong> valid email</strong></small>
                             </div>
                         </ngb-alert>
 
@@ -105,7 +105,7 @@
                     <ngb-alert [type]="'danger'" *ngIf="!status.valid" class="mt-lg-0" [dismissible]="false">
                         <div class="alert-body" >
                             <span [data-feather]="'info'" [class]="'mr-50 align-middle'"></span>
-                            <small>The value is <strong>invalid</strong>Select Status! </small>
+                            <small>Enter<strong> valid Status</strong></small>
                         </div>
                     </ngb-alert>
                 </div>
@@ -135,7 +135,7 @@
                         <ngb-alert [type]="'danger'" *ngIf="!inputNumber.valid" class="mt-lg-0" [dismissible]="false">
                             <div class="alert-body" >
                                 <span [data-feather]="'info'" [class]="'mr-50 align-middle'"></span>
-                                <small>The value is <strong>invalid</strong>Enter valid phone number</small>
+                                <small>Enter<strong> valid phone number</strong></small>
                             </div>
                         </ngb-alert>
                     </div>
@@ -166,7 +166,7 @@
                         <ngb-alert [type]="'danger'" *ngIf="!inputNumberDep.valid" class="mt-lg-0" [dismissible]="false">
                             <div class="alert-body" >
                                 <span [data-feather]="'info'" [class]="'mr-50 align-middle'"></span>
-                                <small>The value is <strong>invalid</strong>enter valid number</small>
+                                <small>Enter<strong> valid number</strong></small>
                             </div>
                         </ngb-alert>
                     </div>
